Compiler/tests/typing/bad/testfile-subscript-3.rs

fn foo() {}
fn main() { (foo())[1]; }
